--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,12 +27,6 @@ jobs:
         run:
             pwsh ./scripts/install-win-sdk.ps1 16299
         if: startsWith(matrix.os, 'windows')
-
-      - name: Install Windows SDK Version 10.0.19041.0
-        run:
-            pwsh ./scripts/install-win-sdk.ps1 19041
-        if: startsWith(matrix.os, 'windows')
-
       - name: Setup Java SDK
 
         uses: actions/setup-java@v4
@@ -55,6 +49,11 @@ jobs:
         run: brew install --cask xamarin-ios
 
       - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
+
+      - name: Restore X64
+        if: startsWith(matrix.os, 'windows')
+        run: msbuild Sentry.Xamarin.sln -p:Configuration=Release /p:Platform=x64
+
       - name: Build Solution with MSBuild
         run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
 
