--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,7 +8,8 @@
     <Features>strict</Features>
   </PropertyGroup>
 
-  <Import Project="scripts\Skip.UWP.MacOs.props" />
+  <!-- Onlyt used for the root build-->
+  <Import Project="scripts\Skip.UWP.MacOs.props" Condition="'$(MSBuildProjectDirectory)' == '$(MSBuildThisFileDirectory)'"/>
 
   <ItemGroup>
     <PackageReference Include="Roslynator.Analyzers" Version="3.0.0" PrivateAssets="All" />
