--- a/scripts/Skip.UWP.MacOs.props
+++ b/scripts/Skip.UWP.MacOs.props
@@ -1,10 +1,10 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Target Name="BuildSentrySDK">
+    <Target Name="BuildSentrySDK" Condition="'$(MSBuildProjectDirectory)' == '$(MSBuildThisFileDirectory)'">
         <MSBuild Projects="Src\Sentry.Xamarin\Sentry.Xamarin.csproj" />
         <MSBuild Projects="Src\Sentry.Xamarin.FormsSentry.Xamarin.Forms.csproj" />
     </Target>
 
-    <Target Name="BuildSamples">
+    <Target Name="BuildSamples" Condition="'$(MSBuildProjectDirectory)' == '$(MSBuildThisFileDirectory)'">
         <MSBuild Projects="Samples\Sample.Xamarin.Core\Sample.Xamarin.Core.csproj" />
         <MSBuild Projects="Samples\Sample.Xamarin.UWP\Sample.Xamarin.UWP.csproj" Condition="'$(OS)' == 'Windows_NT'" Platform="x64"/>
         <MSBuild Projects="Samples\Sample.Xamarin.Mac\Sample.Xamarin.Mac.csproj"/>
