--- a/Samples/Sample.Xamarin.Droid/Directory.Build.props
+++ b/Samples/Sample.Xamarin.Droid/Directory.Build.props
@@ -2,5 +2,6 @@
   <!--Automatic upward search ends when first file found. From here we need to manually import parent props/targets
         https://docs.microsoft.com/en-us/visualstudio/msbuild/customize-your-build -->
   <Import Project="..\..\Directory.Build.props" />
+  <Import Project="..\..\Src\Sentry.Xamarin\buildTransitive\Sentry.Xamarin.targets" />
 
 </Project>
