--- a/Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
+++ b/Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
@@ -60,7 +60,7 @@
     <SentryUploadSymbols>true</SentryUploadSymbols>
     <!-- Sends sources to Sentry, enabling display of source context. -->
     <SentryUploadSources>true</SentryUploadSources>
-    <SentryCLIUploadOptions>--wait --allow_failure</SentryCLIUploadOptions>
+    <SentryCLIUploadOptions>--allow_failure </SentryCLIUploadOptions>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
