--- a/Samples/Sample.Xamarin.iOS/Sample.Xamarin.iOS.csproj
+++ b/Samples/Sample.Xamarin.iOS/Sample.Xamarin.iOS.csproj
@@ -42,6 +42,7 @@
     <!-- Sends sources to Sentry, enabling display of source context. -->
     <SentryUploadSources>true</SentryUploadSources>
     <SentryCLIUploadOptions>--wait</SentryCLIUploadOptions>
+    <UseSentryCLI>false</UseSentryCLI>
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\iPhoneSimulator\Release</OutputPath>
@@ -80,6 +81,8 @@
     <SentryUploadSymbols>true</SentryUploadSymbols>
     <!-- Sends sources to Sentry, enabling display of source context. -->
     <SentryUploadSources>true</SentryUploadSources>
+    <SentryCLIUploadOptions>--wait</SentryCLIUploadOptions>
+    <UseSentryCLI>false</UseSentryCLI>
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\iPhone\Release</OutputPath>
